# duckdb-pdal

./: CHANGES.rst  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES  extension_config.cmake  generate_function_reference.py  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: functions.md
src/: pdal_extension.cpp
src/include/: pdal_extension.hpp
src/pdal/: CMakeLists.txt  pdal_static_registry.cpp  pdal_static_registry.hpp  pdal_table_functions.cpp  pdal_table_functions.hpp
test/data/: autzen-pipeline.json  overlay-sample-pipeline.json  overlay-sample.gpkg  overlay-sample.tiff.aux.xml
test/sql/: pdal.test  pdal_info.test  pdal_pipeline.test  pdal_raster.test  pdal_read.test  pdal_read_options.test  pdal_write.test
vcpkg_ports/pdal/: dependencies.diff  portfile.cmake  vcpkg.json
vcpkg_ports/rapidxml/: portfile.cmake
